snapshot-tests/tests/snapshots/annotate_snippets__eof.snap
---
source: snapshot-tests/tests/annotate_snippets.rs
assertion_line: 15
expression: rendered
---
error: unexpected eof encountered
 --> eof:1:6
  |
1 | key =
  |      ^
